@@ -379,6 +379,7 @@ typedef struct Driver {
     int port;                   /* Port in location. */
     int backlog;                /* listen() backlog. */
     int maxinput;               /* Maximum request bytes to read. */
+    int maxline;                /* Maximum request line size. */
     unsigned int loggingFlags;  /* Logging control flags */
 
 } Driver;
